@@ -1,4 +1,4 @@
 displayName = New Beginnings
 author = Team Spirit
-version = 1.0.0.7
+version = 1.0.1.0
 homepage = discord.gg/uBNnznSfur
