@@ -1,7 +1,11 @@
+ADDITIONS
 - Completely reworked UI, is much better now
 - Added splash text
 - Added Lumberjack Flannel, which the Lumberjack now starts with
+- Added compatibility with MrPlague's Authentic Races
+
+CHANGES
 - Made the Topaz Staff replace the shortsword for Wizard
 - Made the Silver Broadsword replace the shortsword for Knight
 - Made the Lumber Axe replace the default axe for Lumberjack
-- Added compatibility with MrPlague's Authentic Races
+- Pirate now spawns on either ocean instead of default
